Load cart rom into mem handle few op codes
Implemented mapping of romfile to mem
Implemented 8/16bit access to mem.
Implemented some op codes
Implemented loop for testing cyclic running of op codes from loaded rom

--- a/meson.build
+++ b/meson.build
@@ -2,7 +2,10 @@ project('boboy', 'c',
   version : '0.1',
   default_options : ['warning_level=3'])
 
-exe = executable('boboy', 'boboy.c',
-  install : true)
+incdir = include_directories('include')
+boboy_sources = ['boboy.c', 'cart.c', 'cpu.c', 'mem.c']
+
+exe = executable('boboy', boboy_sources,
+  install : true, include_directories : incdir)
 
 test('basic', exe)
