Implement just enough of gpu to handle V_BLANK

--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project('boboy', 'c',
   default_options : ['warning_level=3'])
 
 incdir = include_directories('include')
-boboy_sources = ['boboy.c', 'cart.c', 'cpu.c', 'mem.c']
+boboy_sources = ['boboy.c', 'cart.c', 'cpu.c', 'mem.c', 'gpu.c']
 
 exe = executable('boboy', boboy_sources,
   install : true, include_directories : incdir)
