--- a/meson.build
+++ b/meson.build
@@ -6,7 +6,7 @@ project('boboy', 'c',
 sdldep = dependency('sdl2', version : '>=2.0.0')
 
 incdir = include_directories('include')
-boboy_sources = ['boboy.c', 'cart.c', 'cpu.c', 'mem.c', 'gpu.c', 'sdl.c']
+boboy_sources = ['boboy.c', 'cart.c', 'cpu.c', 'gpu.c', 'mem.c','sdl.c', 'timer.c']
 
 exe = executable('boboy', boboy_sources,
   install : true, include_directories : incdir, dependencies : sdldep)
